--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,17 @@ subprojects {
         compile "org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}"
     }
 }
+
+apply plugin: "java"
+apply plugin: "kotlin"
+apply plugin: "com.github.johnrengelman.shadow"
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    compile project(":component:config")
+}
+
+defaultTasks "shadowJar"
