--- a/build.gradle
+++ b/build.gradle
@@ -12,9 +12,10 @@ buildscript {
     }
 }
 
-subprojects {
+allprojects {
     apply plugin: "java"
     apply plugin: "kotlin"
+    apply plugin: "com.github.johnrengelman.shadow"
 
     repositories {
         mavenCentral()
@@ -26,16 +27,11 @@ subprojects {
     }
 }
 
-apply plugin: "java"
-apply plugin: "kotlin"
-apply plugin: "com.github.johnrengelman.shadow"
-
-repositories {
-    mavenCentral()
-}
+apply plugin: "application"
 
 dependencies {
     compile project(":component:config")
 }
 
-defaultTasks "shadowJar"
+defaultTasks ":shadowJar", ":run"
+mainClassName = "space.eidolon.component.config.ConfigPackage"
